--- a/kalturaPlay/src/main/res/layout/fragment_fullscreen.xml
+++ b/kalturaPlay/src/main/res/layout/fragment_fullscreen.xml
@@ -2,7 +2,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="Fragments.FullscreenFragment">
+    tools:context="Fragments.FullscreenFragment"
+    android:background="@android:color/white">
 
     <com.kaltura.playersdk.PlayerViewController xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
